# fletura

./: .gitignore  .pypirc  README.md  examples.py  pyproject.toml  requirements.txt
fletura/: __init__.py  badge.py  card.py  dock.py  neumoflet.py  paper.py  rating.py  switch.py  timeline.py
