[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fletura"
version = "1.0.8"
description = "A material UI built with flet library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Benit Mulindwa", email = "mulindwabenit@gmail.com"},
]
dependencies = [
    "flet"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/Benitmulindwa/fletura" }
